fix: overflow hidden css removed

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,8 +1,3 @@
-body {
-  margin: 0 !important;
-  padding: 0 !important;
-}
-
 .special-title {
     font-family: "vinque" !important;
     color: #080817;
@@ -71,8 +66,7 @@ body {
 }
 
 .view-container {
-  padding: 12px;
-  margin-top: 50px !important;
-  min-height: 100vh;
+  margin-top: 26px !important;
+  min-height: 95vh;
   min-width: 100vw;
-  }
+}
